Sebin/task/issue 95 and 96 (#100)
* make sure the text isn't covered by the images

* add close button to the fundraiser banner

* make all the link tag styles consistent across the website

* revert the uncompleted work for banner issue

* fix the wierd duplicated banner issue

* remove @nanostores/persistent pkg

* fix the issue where page top-padding is too large event when fundraiser is hidden

--- a/src/styles/components/_links.scss
+++ b/src/styles/components/_links.scss
@@ -1,44 +1,29 @@
+.is-link,
 .link {
-  display: inline; // so border breaks correctly on multiple lines.
-  color: $primary_0;
-  border-bottom: 1px solid $primary_1;
-  cursor: pointer;
-  text-decoration: none;
-  font-weight: 600;
-  position: relative;
-  transition: border-color 0.2s, color ease-in 0.2s;
-  padding-left: 0;
-  padding-right: 0;
-  border-width: 0 0 1px 0;
-  line-height: 1.4; // better underline visually
+  --link-color: #{$primary_0};
 
-  &.has-icon {
-    &::before {
-      content: "";
-      position: absolute;
-      width: 1.3rem;
-      bottom: -1px;
-      left: 0;
-      border-bottom: 2px solid $background;
-      display: inline-block;
-    }
-
-    [class^="icon-"] {
-      margin-right: 0.5rem;
-    }
-  }
-
-  strong {
-    color: currentColor;
-  }
+  font-size: $size_extra_small;
+  color: var(--link-color);
+  background: linear-gradient(to right, rgba(256, 256, 256, 0), rgba(256, 256, 256, 0)),
+              linear-gradient(to right, var(--link-color), var(--link-color));
+  background-position: 100% 100%, 0 100%;
+  background-repeat: no-repeat;
+  background-size: 0 0.1em, 100% 0.1em;
+  transition: color 200ms;
 
   &:hover,
   &:focus {
-    color: $text_0;
-    border-bottom-color: $text_0;
+    --link-color: #{$green};
+    animation: link-hover-ani 300ms linear forwards;
+    outline: none;
   }
 
-  &.no-border {
-    border-bottom: none;
+  &.is-display-block {
+    width: max-content;
   }
+}
+
+@keyframes link-hover-ani {
+  0% { background-size: 100% 0.1em, 0 0.1em; }
+  100% { background-size: 0 0.1em, 100% 0.1em; }
 }
